objects/DMAPP__DM_SYS_Usage_Send_Detail__c.object
<CustomObject>
    <description>Contains details of the usage stats that have been sent</description>
    <fields>
        <fullName>DMAPP__EmailCCReceiver__c</fullName>
        <label>EmailCCReceiver</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__EmailReceiver__c</fullName>
        <label>EmailReceiver</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Execution_DateTime__c</fullName>
        <label>Execution DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Job_name__c</fullName>
        <label>Job name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__RecordsSent__c</fullName>
        <label>RecordsSent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DM SYS Usage Send Detail</label>
    <nameField>
        <label>DM SYS Usage Send Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM SYS Usage Send Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>